--- a/qml.qrc
+++ b/qml.qrc
@@ -25,5 +25,84 @@
         <file>UI/View/PosActivitiesViewForm.ui.qml</file>
         <file>UI/View/PlanningRecepView.qml</file>
         <file>UI/View/PlanningRecepViewForm.ui.qml</file>
+        <file>UI/ViewCell/PosActivitiesViewOpenOrderCell.qml</file>
+        <file>Assets/Image/forward.png</file>
+        <file>UI/ViewCell/PosActivitiesViewTableCell.qml</file>
+        <file>UI/ViewCell/PosActivitiesViewActivityCell.qml</file>
+        <file>Assets/Image/Pos/Activite/icone_bar_blue.png</file>
+        <file>Assets/Image/Pos/Activite/icone_restaurant_blue.png</file>
+        <file>Assets/Image/Pos/Activite/icone_veranda_blue.png</file>
+        <file>Assets/Image/Pos/Drawer/cook.png</file>
+        <file>Assets/Image/Pos/Drawer/logout.png</file>
+        <file>Assets/Image/Pos/GroupProduct/apperitif.png</file>
+        <file>Assets/Image/Pos/GroupProduct/bieres.png</file>
+        <file>Assets/Image/Pos/GroupProduct/burger.png</file>
+        <file>Assets/Image/Pos/GroupProduct/cdm.png</file>
+        <file>Assets/Image/Pos/GroupProduct/champagne.png</file>
+        <file>Assets/Image/Pos/GroupProduct/chicken-menu-icon.png</file>
+        <file>Assets/Image/Pos/GroupProduct/crepegauffr.png</file>
+        <file>Assets/Image/Pos/GroupProduct/dessert.png</file>
+        <file>Assets/Image/Pos/GroupProduct/digestif.png</file>
+        <file>Assets/Image/Pos/GroupProduct/ems.png</file>
+        <file>Assets/Image/Pos/GroupProduct/glaces.png</file>
+        <file>Assets/Image/Pos/GroupProduct/hotbe.png</file>
+        <file>Assets/Image/Pos/GroupProduct/menuicon.png</file>
+        <file>Assets/Image/Pos/GroupProduct/platpate.png</file>
+        <file>Assets/Image/Pos/GroupProduct/salade.png</file>
+        <file>Assets/Image/Pos/GroupProduct/sff.png</file>
+        <file>UI/ListModel/ResaTabBarListModel.qml</file>
+        <file>UI/ListModel/ResaDrawerListModel.qml</file>
+        <file>UI/ListModel/RecepTabBarListModel.qml</file>
+        <file>UI/ListModel/RecepDrawerListModel.qml</file>
+        <file>UI/ListModel/HouseKeepingTabBarListModel.qml</file>
+        <file>UI/ListModel/PosDrawerListModel.qml</file>
+        <file>icons/gallery/20x20/back.png</file>
+        <file>icons/gallery/20x20/drawer.png</file>
+        <file>icons/gallery/20x20/forward.png</file>
+        <file>icons/gallery/20x20/menu.png</file>
+        <file>icons/gallery/20x20@2/back.png</file>
+        <file>icons/gallery/20x20@2/drawer.png</file>
+        <file>icons/gallery/20x20@2/forward.png</file>
+        <file>icons/gallery/20x20@2/menu.png</file>
+        <file>icons/gallery/20x20@3/back.png</file>
+        <file>icons/gallery/20x20@3/drawer.png</file>
+        <file>icons/gallery/20x20@3/forward.png</file>
+        <file>icons/gallery/20x20@3/menu.png</file>
+        <file>icons/gallery/20x20@4/back.png</file>
+        <file>icons/gallery/20x20@4/buddy.png</file>
+        <file>icons/gallery/20x20@4/drawer.png</file>
+        <file>icons/gallery/20x20@4/forward.png</file>
+        <file>icons/gallery/20x20@4/logout.png</file>
+        <file>icons/gallery/20x20@4/menu.png</file>
+        <file>icons/gallery/index.theme</file>
+        <file>UI/Dialog/PosProductSearchDialog.qml</file>
+        <file>UI/Component/MatSpinBox.qml</file>
+        <file>UI/Component/MatSeparator.qml</file>
+        <file>Assets/Image/Common/pointille.png</file>
+        <file>UI/ViewCell/OrderViewOrderDetailCell.qml</file>
+        <file>UI/ViewCell/OrderViewProductCell.qml</file>
+        <file>UI/ViewCell/OrderViewProductGroupCell.qml</file>
+        <file>UI/Component/MatToast.qml</file>
+        <file>UI/View/OrderCheckoutView.qml</file>
+        <file>UI/View/OrderCheckoutViewForm.ui.qml</file>
+        <file>UI/ViewCell/OrderCheckoutCashingModeCell.qml</file>
+        <file>Assets/Image/Pos/CashingMode/carte.png</file>
+        <file>Assets/Image/Pos/CashingMode/carteeuro.png</file>
+        <file>Assets/Image/Pos/CashingMode/cartegab.png</file>
+        <file>Assets/Image/Pos/CashingMode/cheque.png</file>
+        <file>Assets/Image/Pos/CashingMode/chequeeuro.png</file>
+        <file>Assets/Image/Pos/CashingMode/espece.png</file>
+        <file>Assets/Image/Pos/CashingMode/especeeuro.png</file>
+        <file>Assets/Image/Pos/CashingMode/mobile.png</file>
+        <file>Assets/Image/Pos/CashingMode/mobileeuro.png</file>
+        <file>Assets/Image/Pos/CashingMode/telecarte.png</file>
+        <file>Assets/Image/Pos/CashingMode/transfert.png</file>
+        <file>UI/View/ResaPlanningView.qml</file>
+        <file>UI/View/ResaPlanningViewForm.ui.qml</file>
+        <file>UI/View/RecepPlanningView.qml</file>
+        <file>UI/View/RecepPlanningViewForm.ui.qml</file>
+        <file>UI/View/HouseKeepingCalendarView.qml</file>
+        <file>UI/View/HouseKeepingCalendarViewForm.ui.qml</file>
+        <file>UI/ListModel/HouseKeepingDrawerListModel.qml</file>
     </qresource>
 </RCC>
